# garden-store-email-agent

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: config.py  graph.py  state.py
agent/nodes/: classifier.py  human_approval.py  other_reply.py  plant_advisor.py  reader.py  save_answer.py
agent/utils/: file_io.py
emails/: example_other.txt  example_plant.txt
tests/: test_classifier.py  test_file_io.py  test_reader.py  test_save_answer.py
ui/: cli.py  streamlit_app.py
