[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "garden-store-email-agent"
version = "0.1.0"
description = "LangChain/LangGraph agent for processing garden store customer emails"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "BohuslavKoukal" }
]

dependencies = [
  # LangChain ecosystem
  "langchain>=0.3",
  "langchain-openai>=0.3",
  "langgraph>=0.3",

  # Environment & config
  "python-dotenv>=1.0",

  # UI
  "streamlit>=1.40",

  # Utilities
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
email-agent = "ui.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
